Chris - DevOrg/src/objects/TimeTrigger__c.object
<CustomObject>
    <description>Trigger to initiate actions on a scheduled basis</description>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Frequency of timer</description>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NextTrigger__c</fullName>
        <description>Next schedule trigger</description>
        <label>NextTrigger</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Run__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to trigger off in order to identify ok to run job</description>
        <label>Run</label>
        <type>Checkbox</type>
    </fields>
    <label>TimeTrigger</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Frequency__c</columns>
        <columns>NextTrigger__c</columns>
        <columns>Run__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Timer{000}</displayFormat>
        <label>Timer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeTriggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>